[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/player/Player.gd" type="Script" id=1]
[ext_resource path="res://resource/UI/InGame/InGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://resource/models/custom/bedroom/MenuTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/player/Pause.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=4]
friction = 0.0

[sub_resource type="CapsuleShape" id=5]
radius = 0.4
height = 0.8

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.16, 0.8, 0.16, 1 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
radius = 0.3
radial_segments = 16

[sub_resource type="CapsuleShape" id=6]
height = 1.8

[node name="Player" type="RigidBody"]
collision_layer = 10
collision_mask = 9
mode = 2
physics_material_override = SubResource( 4 )
script = ExtResource( 1 )

[node name="InGame" parent="." instance=ExtResource( 2 )]
pause_mode = 0
physics_interpolation_mode = 0
process_priority = 2
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.8, 0 )
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
visible = false
mesh = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
current = true
fov = 90.0
far = 160.0

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collision_mask = 4

[node name="hand" type="Position3D" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="hand2" type="Position3D" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2 )

[node name="DropRayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1.65 )

[node name="CatNapArea" type="Area" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionShape" type="CollisionShape" parent="CatNapArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.8, 0 )
shape = SubResource( 6 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.270588, 0.258824, 0.219608, 0.517647 )

[node name="CenterContainer" type="CenterContainer" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/CenterContainer"]
margin_left = 446.0
margin_top = 210.0
margin_right = 833.0
margin_bottom = 509.0

[node name="ContinueButton" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_right = 387.0
margin_bottom = 97.0
theme = ExtResource( 3 )
text = "Continue"

[node name="RestartButton" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 387.0
margin_bottom = 198.0
theme = ExtResource( 3 )
text = "Restart"

[node name="MenuButton" type="Button" parent="Pause/CenterContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 387.0
margin_bottom = 299.0
theme = ExtResource( 3 )
text = "Menu"

[connection signal="area_entered" from="CatNapArea" to="." method="_on_CatNapArea_area_entered"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/ContinueButton" to="Pause" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/RestartButton" to="Pause" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Pause/CenterContainer/VBoxContainer/MenuButton" to="Pause" method="_on_MenuButton_pressed"]
